# eosimutils

./: .gitignore  Makefile  README.md  pyproject.toml
eosimutils/: attitude.py  base.py  fieldofview.py  frame_registry.py  framegraph.py  frames.py  kinematic.py  orientation.py  plotting.py  position.py  spicekernels.py  standardframes.py  state.py  thirdpartyutils.py  time.py  timeseries.py  trajectory.py  utils.py
examples/: frame_examples.py  time_examples.py  trajectory_example.py
tests/: test_base.py  test_fieldofview.py  test_framegraph.py  test_frameregistry.py  test_frames.py  test_kinematic.py  test_orientation.py  test_orientation_spiceorientation.py  test_position.py  test_state.py  test_time.py  test_timeseries.py  test_trajectory.py  testutils.py
